--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
-source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '8.0'
+#source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '9.0'
 
 target 'podFTDemo_Example' do
   pod 'podFTDemo', :path => '../'
